# adcs-simulation

./: .gitignore  AUTHORS.rst  LICENSE  README.rst  pyproject.toml  tox.ini
.github/workflows/: docs.yml  format.yml  install.yml  lint.yml  package.yml  pages.yml  tests.yml
docs/: conf.py  index.rst
docs/autogen/: adcs_simulation.adcs_simulation.rst  adcs_simulation.rst  modules.rst
src/adcs_simulation/: adcs.py  propagator.py  utils.py  visualization.py
src/adcs_simulation/configuration/: ADCS_setup.json  config.py
tests/: test_adcs_simulation.py
