[tool.poetry]
name = "adcs_simulation"
version = "0.1.0"
description = "Attitude Determination and Control System simulation for WroSat satellite project."
authors = ["Arek Drabik <arek.drabik1453@gmail.com>", "Jan Bronicki <janbronicki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.format.dependencies]
black = "^22.10.0"
isort = "^5.10.1"


[tool.poetry.group.dev.dependencies]
tox = "^3.26.0"


[tool.poetry.group.type_check.dependencies]
mypy = "^0.982"
types-all = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
toml = "^0.10.2"


[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
sphinx-autorun = "^1.1.1"
sphinx-rtd-theme = "^1.0.0"


[tool.poetry.group.lint.dependencies]
pylint = "^2.15.5"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
