[tool.poetry]
name = "adcs_simulation"
version = "0.1.0"
description = "Attitude Determination and Control System simulation for WroSat satellite project."
authors = [
    "Arek Drabik <arek.drabik1453@gmail.com>",
    "Jan Bronicki <janbronicki@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.1"
pandas = "^1.5.1"
scipy = "^1.9.3"
numpy = "^1.23.4"
tomli = "^2.0.1"
pytz = "^2022.5"
sgp4 = "^2.21"
skyfield = "^1.45"
python-dateutil = "^2.8.2"
jplephem = "^2.18"
igrf = "^13.0.2"
fonttools = "^4.38.0"

[tool.poetry.group.format.dependencies]
black = "^22.10.0"
isort = "^5.10.1"


[tool.poetry.group.dev.dependencies]
tox = "^3.26.0"


[tool.poetry.group.type_check.dependencies]
mypy = "^0.982"
types-all = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
toml = "^0.10.2"


[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
sphinx-autorun = "^1.1.1"
sphinx-rtd-theme = "^1.0.0"


[tool.poetry.group.lint.dependencies]
pylint = "^2.15.5"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
